Product-> Controller DAO Enity Service product.js(main.js) index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,12 +11,17 @@
     <input type="text" name="description" placeholder="descr" id="descr"/>
     <input type="text" name="price" placeholder="price" id="price"/>
     <button id="saveBtn">save</button>
+    <button id="SortByLowPrice">SortByLowPrice</button>
+    <button id="SortByHighPrice">SortByHighPrice</button>
+    <button id="SortByAddingDate">SortByAddingDate</button>
+
 
     <div class="target">
 
     </div>
-    <!--<script src="/main.js">-->
-    <!--</script>-->
-    <script src="/test.js"></script>
+
+    <script src="/products.js"></script>
+
+    <!--<script src="/test.js"></script>-->
 </body>
 </html>
