Category+Product JOIN

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,9 @@
     <input type="text" name="pName" placeholder="name" id="name"/>
     <input type="text" name="description" placeholder="descr" id="descr"/>
     <input type="text" name="price" placeholder="price" id="price"/>
+    <!--<input type="text" name="category" placeholder="category" id="category"/>-->
+    <select id="list"></select>
+
     <button id="saveBtn">save</button>
     <button id="SortByLowPrice">SortByLowPrice</button>
     <button id="SortByHighPrice">SortByHighPrice</button>
