--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,8 +15,8 @@
     <div class="target">
 
     </div>
-    <!--<script src="/main.js">-->
-    <!--</script>-->
+    <script src="/main.js">
+    </script>
     <script src="/test.js"></script>
 </body>
 </html>
