--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -7,28 +7,21 @@
 </head>
 <body>
 
-    <input type="text" name="pName" placeholder="name" id="name"/>
-    <input type="text" name="description" placeholder="descr" id="descr"/>
-    <input type="text" name="price" placeholder="price" id="price"/>
-    <!--<input type="text" name="category" placeholder="category" id="category"/>-->
-    <select id="list"></select>
 
-    <button id="saveBtn">save</button>
-    <button id="SortByLowPrice">SortByLowPrice</button>
-    <button id="SortByHighPrice">SortByHighPrice</button>
-    <button id="SortByAddingDate">SortByAddingDate</button>
+<!--<select>-->
+<!--<option id="SortByLowPrice" >За зростанням  ціни</option>-->
+<!--<option id="SortByHighPrice" >За зменшенням  ціни</option>-->
+<!--</select>-->
+<button id="SortByLowPrice">За зростанням ціни</button>
+<button id="SortByHighPrice">За зменшенням ціни</button>
+
+<input type="text" name="name" id="name"/>
+<button id="search">пошук</button>
 
 
-    <div class="target">
-
-    </div>
-    <script src="/main.js">
-    </script>
-    <script src="/test.js"></script>
-
-    <script src="/products.js"></script>
-
-    <!--<script src="/test.js"></script>-->
+<div class="target"></div>
+<script src="/main.js"></script>
+<script src="/test.js"></script>
 
 </body>
 </html>
