--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -9,7 +9,7 @@
 <br/>
 
 
-<form name="myform" onsubmit= " return checkEmail()">
+<form name="myform">
     <input type="text" name="firstName" placeholder="first name" id="first" onkeyup="checkFirst()"/>
     <p id="first_name"></p>
     <input type="text" name="lastName" placeholder="last name" id="last" onkeyup="checkLast()"/>
@@ -21,7 +21,7 @@
     <input type="email" name="email" placeholder="email" id="email" onkeyup="checkEmail()"/>
     <p id="email_"></p>
     <select id="list"></select>
-    <input type="submit" id="saveUser"></input>
+    <input type="submit" id="saveUser"/>
 </form>
 
 <div class="targetcus"></div>
