--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -10,8 +10,8 @@
 
 
 
-<form name="myform" onchange="mainCheck()" >
 
+<div id="inputsCustomer">
     <input type="text" name="firstName" placeholder="first name" id="first" onkeyup="checkFirst()"/>
     <p id="first_name"></p>
     <input type="text" name="lastName" placeholder="last name" id="last" onkeyup="checkLast()"/>
@@ -24,8 +24,8 @@
     <p id="email_"></p>
     <select id="list"></select>
 
-    <input type="submit" id="saveUser"/>
-</form>
+    <button id="saveUser">save</button>
+</div>
 
 <div class="targetcus"></div>
 
