--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
 
 <input type="text" name="name" id="name"/>
 <button id="search">пошук</button>
+<button id="cartBox" href="cartBox">Корзина</button>
 
 
 <div class="target"></div>
