--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 
 <input type="text" name="name" id="name"/>
 <button id="search">пошук</button>
-<button id="cartBox" href="cartBox">Корзина</button>
+<a href="cartBox">Корзина</a>
 
 
 <div class="target"></div>
