--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,11 +12,11 @@
 <div id="cartsProduct" ng-controller="carts">
     <button ng-click="buy()">buy</button>
     <div ng-repeat="cart in cartsArray track by $index">
-    <p>{{cart}}</p>
+    <p>{{cart.name}} {{cart.price}}</p>
     <button ng-click="removeOne($index)">remove</button>
     <button ng-click="increment($index)">+</button>
-    <button ng-click="decrement($index)">-</button>
-    </div>
+        {{cart.quantity}}
+    <button ng-click="decrement($index)">-</button>   </div>
  </div>
 
 
