customer and cart are connected

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,8 @@
 
 <input type="text" name="name" id="name"/>
 <button id="search">пошук</button>
-<a href="cartBox">Корзина</a>
+<a href="cartBox"><button>Корзина</button></a>
+<a href="account"><button>Аккаунт</button></a>
 
 
 <div class="target"></div>
