--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -10,8 +10,9 @@
 <body>
 
 <div id="cartsProduct" ng-controller="carts">
-    <button ng-click="buy()">buy</button>
-    <div ng-repeat="cart in cartsArray track by $index">
+    <!--<button ng-click="buy()">buy</button>-->
+    <a href="account"><button>Купити</button></a>
+    <div ng-repeat="cart in cartsArray track by $index ">
     <p>{{cart.name}} {{cart.price}}</p>
     <button ng-click="removeOne($index)">remove</button>
     <button ng-click="increment($index)">+</button>
