--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 
 <input type="text" name="name" id="name"/>
 <button id="search">пошук</button>
-<a href="cartBox">Корзина</a>
+<a href="cartBox"><button>Корзина</button></a>
 
 
 <div class="target"></div>
