--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Title</title>
+    <link type="text/css" href="css/preloader.css" rel="stylesheet" />
 </head>
 <body>
 
+<div id="preloader"></div>
 
 <!--<select>-->
 <!--<option id="SortByLowPrice" >За зростанням  ціни</option>-->
@@ -25,6 +27,7 @@
 
 <script src="/main.js"></script>
 <script src="/test.js"></script>
+<script src="/preloader.js"></script>
 
 </body>
 </html>
