--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -9,9 +9,11 @@
 
 <body>
 
+
+
 <div id="cartsProduct" ng-controller="carts">
     <!--<button ng-click="buy()">buy</button>-->
-    <a href="account"><button>Купити</button></a>
+    <a href="account"><button ng-hide = "but_show">Купити</button></a>
     <div ng-repeat="cart in cartsArray track by $index">
     <p>{{cart.name}} {{cart.price}}</p>
     <button ng-click="removeOne($index)">remove</button>
