preloader to all pages

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -27,6 +27,11 @@
 
 <div class="targetcus"></div>
 
+
+<div th:include="/fragments/frag::#pred" ></div>
+<div th:include="/fragments/frag::style"/>
+<div th:include="/fragments/frag::static"/>
+
 <script src="/acc.js"></script>
 <script src="/test.js"></script>
 </body>
