--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -22,6 +22,10 @@
 <div id="listprod"></div>
 
 
+<div th:include="/fragments/frag::#pred" ></div>
+<div th:include="/fragments/frag::style"/>
+<div th:include="/fragments/frag::static"/>
+
 <script src="/main.js"></script>
 <script src="/test.js"></script>
 <script src="/products.js"></script>
