--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="myApp" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -11,7 +11,7 @@
 
 <div id="cartsProduct" ng-controller="carts">
     <!--<button ng-click="buy()">buy</button>-->
-    <a href="account"><button>Купити</button></a>
+    <a href="account"><button ng-hide = "but_show">Купити</button></a>
     <div ng-repeat="cart in cartsArray track by $index">
     <p>{{cart.name}} {{cart.price}}</p>
     <button ng-click="removeOne($index)">remove</button>
@@ -21,6 +21,10 @@
     </div>
  </div>
 
+
+<div th:include="/fragments/frag::#pred" ></div>
+<div th:include="/fragments/frag::style"/>
+<div th:include="/fragments/frag::static"/>
 
 <script src="/cartProduct.js"></script>
 </body>
