modal window for cart

--- a/src/main/resources/templates/fragments/frag.html
+++ b/src/main/resources/templates/fragments/frag.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"/>
     <title>Title</title>
 </head>
-<body>
+<body  ng-app="myApp">
 
 <div id="pred">
     <div id="preloader"></div>
@@ -18,6 +18,11 @@
 <div th:fragment="static">
     <script th:src="@{/preloader.js}"/>
 </div>
+
+
+
+
+
 
 </body>
 </html>
