--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,14 @@
 <div th:include="/fragments/frag::static"/>
 
 
+
+<div th:include="/fragments/frag::#cart_modal" />
+<div th:include="/fragments/frag::css_mod"/>
+<div th:include="/fragments/frag::js_mod"/>
+
+
+
+
 <script src="/main.js"></script>
 <script src="/test.js"></script>
 
