--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,16 @@
 </head>
 <body>
 
-    <input type="text" name="pName" placeholder="name" id="name"/>
-    <input type="text" name="description" placeholder="descr" id="descr"/>
+    <input type="text" name="pName" placeholder="name" id="name" value="name"/>
+    <input type="text" name="description" placeholder="descr" id="descr" value="descr"/>
     <input type="text" name="price" placeholder="price" id="price"/>
     <button id="saveBtn">save</button>
 
     <div class="target">
 
+        <button id="bat1" >add *</button>
+        <button id="bat2" >add -</button>
+        <button id="bat3" >add +</button>
     </div>
     <!--<script src="/main.js">-->
     <!--</script>-->
