fixed bugs with modal cart

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 
 <div ng-hide = "cartbox_show" id="modalCartBox">
     <div id="modalCartBoxContent">
-        <div id="cartsProduct" ng-controller="carts">
+        <div id="cartsProduct">
             <!--<button ng-click="buy()">buy</button>-->
             <a href="account"><button ng-hide = "but_show">Купити</button></a>
             <div ng-repeat="cart in cartsArray track by $index">
