--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -52,6 +52,7 @@ li>a{
     margin-top: -80px;
     width: 50px;
     height: 50px;
+    cursor: pointer;
 }
 
 
@@ -80,4 +81,26 @@ html {
     position:relative;
     min-height:100%;
 
+}
+
+.categoryButtons{
+    margin-top: 10px;
+    width: 10%;
+    display: inline-block;
+
+}
+.categorys{
+
+
+    /*width: 10%;*/
+    height: 100px;
+    background-color: #43484D;
+    border: 5px solid red;
+    cursor: pointer;
+
+}
+.categoryBox{
+    display: inline-block;
+    margin: auto;
+    /*float: right;*/
 }
