fixed modal  window of cart

--- a/src/main/resources/static/css/modal.css
+++ b/src/main/resources/static/css/modal.css
@@ -1,5 +1,5 @@
 #modalCartBox {
-
+    display: flex;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
@@ -11,171 +11,109 @@
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 
 }
-.cart_item{
-
-    display: flex;
-    widht: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
 
 #modalCartBoxContent {
+
     overflow: auto;
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: auto auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 750px;
-    height: 423px;
-    margin: 80px auto;
+    width: 40rem;
+    height: 500px;
+
     background: #FFFFFF;
     box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
     border-radius: 6px;
+    font-family: "PT Sans",sans-serif;
+}
+.header{
     display: flex;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.header::after {
+    margin-bottom:10px;
+    height:1px;
+    background-color: #ccc;
+    width: 100%;
+}
+.header__description{
+    font-family: sans-serif;
+    font-size: 2rem;
+    margin-top:25px;
+}
+.shopping{
+    border: none;
+    width:25px;
+    height: 25px;
+    color: transparent;
+    background-color: #fff;
+    background-image: url("../image/close.svg");
+    background-size: contain ;
+    background-repeat: no-repeat;
+    margin-top: 25px;
+    outline: none;
+}
+.item{
+    display: flex;
+    justify-content: space-between;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
     flex-direction: row;
-    flex-direction: column;
+    margin-bottom: 10px;
 }
-
-
-
-.title {
-    height: 60px;
-    border-bottom: 1px solid #E1E8EE;
-    padding: 20px 30px;
-    color: #5E6977;
-    font-size: 18px;
-    font-weight: 400;
-}
-
-.item {
-    padding: 20px 30px;
-    height: 120px;
-    display: flex;
-}
-
-.item:nth-child(3) {
-    border-top:  1px solid #E1E8EE;
-    border-bottom:  1px solid #E1E8EE;
-}
-
-.buttons {
-    position: relative;
-    padding-top: 30px;
-    margin-right: 60px;
-}
-.delete-btn {
-    display: inline-block;
-    Cursor: pointer;
-}
-.delete-btn {
-    width: 18px;
-    height: 17px;
-    background: url("/image/delete.ico") no-repeat center;
-}
-
-
-.image {
-    margin-right: 50px;
-}
-
-/*Let’s add some basic style to  product name and description.*/
-.description {
-    padding-top: 18px;
-    margin-right: 60px;
-    width: 115px;
-}
-
-.description span {
-    display: block;
-    font-size: 14px;
-    color: #43484D;
-    font-weight: 400;
-}
-
-.description span:first-child {
-    margin-bottom: 5px;
-}
-.description span:last-child {
-    font-weight: 300;
-    margin-top: 20px;
-    color: #86939E;
-}
-
-
-.quantity {
-    padding-top: 20px;
-    margin-right: 60px;
-}
-.quantity input {
-    -webkit-appearance: none;
-    border: none;
-    text-align: center;
-    width: 32px;
-    font-size: 16px;
-    color: #43484D;
-    font-weight: 300;
-}
-
-button[class*=btn] {
+.item_count_less,
+.item_count_more,
+.item_clear{
     width: 30px;
-    height: 30px;
-    background-color: #E1E8EE;
-    border-radius: 6px;
-    border: none;
-    cursor: pointer;
-}
-.minus-btn img {
-    margin-bottom: 3px;
-}
-.plus-btn img {
-    margin-top: 2px;
+    height: 25px;
+    border: 1px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+
+
 }
 
-button:focus,
-input:focus {
-    outline:0;
+.item_clear{
+    width: 50px;
 }
-
-.total-price {
-    width: 83px;
-    padding-top: 27px;
+.item_count{
     text-align: center;
-    font-size: 16px;
-    color: #43484D;
-    font-weight: 300;
+    width: 30px;
+    height: 22px;
+    border: 1px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+
+}
+.item_img{
+    width: 5rem;
+    height: 5rem;
+    /*background-color: #e2e2e2;*/
 }
 
-.buy_btn{
-    /*width: 100px;*/
-    /*height: 30px;*/
-    /*float: right;*/
-    /*margin-left: 500px;*/
+.item_name{
+    margin-top:20px;
+    margin-left:20px;
+    width:100px;
+    font-size:1.3rem;
 }
-
-
-@media (max-width: 800px) {
-    .shopping-cart {
-        width: 100%;
-        height: auto;
-        overflow: hidden;
-    }
-    .item {
-        height: auto;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .image img {
-        width: 50%;
-    }
-    .image,
-    .quantity,
-    .description {
-        width: 100%;
-        text-align: center;
-        margin: 6px 0;
-    }
-    .buttons {
-        margin-right: 20px;
-    }
+.item_count_less,
+.item_count_more,
+.item_clear,
+.item_name,
+.item_price,
+.item_total{
+    margin-top: 25px;
 }
-
+.total_price{
+    float: right;
+    margin-right: 30px;
+    font-size:1.2rem;
+    font-family:sans-serif;
+}
