--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -4,7 +4,7 @@
 }
 header{
     height:200px;
-    width: relative;
+    width: 100%;
     background-color: #04c852;
 
 }
@@ -46,13 +46,6 @@ li>a{
     float: left;
 }
 
-.cart{
-    float: right;
-    margin-right: 10px;
-    margin-top: -80px;
-    width: 50px;
-    height: 50px;
-}
 
 
 
@@ -66,7 +59,19 @@ footer{
 
 
 }
+.shopping-cart{
+    float: right;
+    margin-right: 20px;
+    width: 50px;
+    height: 50px;
+    color: transparent;
+    background-image: url("../image/shopping-cart.svg");
+    background-size: contain ;
+    background-repeat: no-repeat;
 
+    outline: none;
+
+}
 .wraper{
     height: 100%;
 }
