--- a/src/main/resources/templates/fragments/frag.html
+++ b/src/main/resources/templates/fragments/frag.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"/>
     <title>Title</title>
 </head>
-<body  ng-app="myApp">
+<body ng-app="myApp">
 
 <div id="pred">
     <div id="preloader"></div>
@@ -16,25 +16,8 @@
 </div>
 
 <div th:fragment="static">
-    <script th:src="@{/preloader.js}"/>
+    <script th:src="@{/preloader.js}"></script>
 </div>
-
-
-
-<div>
-    <header>
-
-
-    </header>
-</div>
-
-<div>
-    <footer>
-
-    </footer>
-</div>
-
-
 
 
 </body>
