--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,7 +3,7 @@
     margin:0;
 }
 header{
-    height:200px;
+    height:100px;
     width: 100%;
     background-color: #04c852;
 
@@ -76,9 +76,9 @@ footer{
     height: 100%;
 }
 
-main{
-    padding-bottom: 100px;
-}
+/*main{*/
+    /*padding-bottom: 100px;*/
+/*}*/
 
 html {
 
@@ -87,24 +87,4 @@ html {
 
 }
 
-.categoryButtons{
-    margin-top: 10px;
-    width: 10%;
-    display: inline-block;
 
-}
-.categorys{
-
-
-    /*width: 10%;*/
-    height: 100px;
-    background-color: #43484D;
-    border: 5px solid red;
-    cursor: pointer;
-
-}
-.categoryBox{
-    display: inline-block;
-    margin: auto;
-    /*float: right;*/
-}
